@@ -36,16 +36,18 @@ public class CreateStorageEngineReactor extends AbstractReactor {
 	private static final Logger classLogger = LogManager.getLogger(CreateStorageEngineReactor.class);
 
 	public CreateStorageEngineReactor() {
-		this.keysToGet = new String[] {ReactorKeysEnum.STORAGE.getKey(), ReactorKeysEnum.STORAGE_DETAILS.getKey(), ReactorKeysEnum.GLOBAL.getKey()};
+		this.keysToGet = new String[] { ReactorKeysEnum.STORAGE.getKey(), ReactorKeysEnum.STORAGE_DETAILS.getKey(),
+				ReactorKeysEnum.GLOBAL.getKey() };
+		this.keyRequired = new int[] { 1, 1, 0 };
 	}
-	
+
 	@Override
 	public NounMetadata execute() {
 		User user = this.insight.getUser();
 		if (user == null) {
 			NounMetadata noun = new NounMetadata(
-					"User must be signed into an account in order to create a storage engine", PixelDataType.CONST_STRING,
-					PixelOperationType.ERROR, PixelOperationType.LOGGIN_REQUIRED_ERROR);
+					"User must be signed into an account in order to create a storage engine",
+					PixelDataType.CONST_STRING, PixelOperationType.ERROR, PixelOperationType.LOGGIN_REQUIRED_ERROR);
 			SemossPixelException err = new SemossPixelException(noun);
 			err.setContinueThreadOfExecution(false);
 			throw err;
@@ -58,8 +60,7 @@ public class CreateStorageEngineReactor extends AbstractReactor {
 		}
 
 		// throw error is user doesn't have rights to publish new databases
-		if (AbstractSecurityUtils.adminSetPublisher()
-				&& !SecurityQueryUtils.userIsPublisher(this.insight.getUser())) {
+		if (AbstractSecurityUtils.adminSetPublisher() && !SecurityQueryUtils.userIsPublisher(this.insight.getUser())) {
 			throwUserNotPublisherError();
 		}
 
@@ -68,36 +69,37 @@ public class CreateStorageEngineReactor extends AbstractReactor {
 		}
 
 		organizeKeys();
-		
+
 		String storageName = getStorageName();
-		//if storage name is not valid throw error
+		// if storage name is not valid throw error
 		if (!Utility.validateName(storageName)) {
-			//error and redirect to try again
-			throw new IllegalArgumentException("Invalid Name: It must start with a letter and can only contain letters, numbers, and spaces.");
+			// error and redirect to try again
+			throw new IllegalArgumentException(
+					"Invalid Name: It must start with a letter and can only contain letters, numbers, and spaces.");
 		}
-		
-		//String storageName = getStorageName();
+
+		// String storageName = getStorageName();
 		Map<String, Object> storageDetails = getStorageDetails();
-		boolean global = Boolean.parseBoolean(this.keyValue.get(ReactorKeysEnum.GLOBAL.getKey())+"");
+		boolean global = Boolean.parseBoolean(this.keyValue.get(ReactorKeysEnum.GLOBAL.getKey()) + "");
 
 		String storageTypeStr = (String) storageDetails.get(IStorageEngine.STORAGE_TYPE);
-		if(storageTypeStr == null || (storageTypeStr=storageTypeStr.trim()).isEmpty()) {
+		if (storageTypeStr == null || (storageTypeStr = storageTypeStr.trim()).isEmpty()) {
 			throw new IllegalArgumentException("Must define the storage type");
 		}
 		StorageTypeEnum storageType = null;
 		try {
 			storageType = StorageTypeEnum.getEnumFromName(storageTypeStr);
-		} catch(Exception e) {
+		} catch (Exception e) {
 			throw new IllegalArgumentException("Invalid storage type " + storageTypeStr);
 		}
-		
-		if(storageType == StorageTypeEnum.LOCAL_FILE_SYSTEM) {
+
+		if (storageType == StorageTypeEnum.LOCAL_FILE_SYSTEM) {
 			// only admin can create a local file system storage engine
-			if(!SecurityAdminUtils.userIsAdmin(user)) {
+			if (!SecurityAdminUtils.userIsAdmin(user)) {
 				throw new IllegalArgumentException("Only an admin can create a local file system storage engine");
 			}
 		}
-		
+
 		String storageId = UUID.randomUUID().toString();
 		File tempSmss = null;
 		File smssFile = null;
@@ -106,109 +108,82 @@ public class CreateStorageEngineReactor extends AbstractReactor {
 		try {
 			// validate engine
 			UploadUtilities.validateEngine(IEngine.CATALOG_TYPE.STORAGE, user, storageName, storageId);
-			specificEngineFolder = UploadUtilities.generateSpecificEngineFolder(IEngine.CATALOG_TYPE.STORAGE, storageId, storageName);
-			
+			specificEngineFolder = UploadUtilities.generateSpecificEngineFolder(IEngine.CATALOG_TYPE.STORAGE, storageId,
+					storageName);
+
 			String storageClass = storageType.getStorageClass();
-			storage = (IStorageEngine) Class.forName(storageClass).newInstance();
+			storage = (IStorageEngine) Class.forName(storageClass).getDeclaredConstructor().newInstance();
 			tempSmss = UploadUtilities.createTemporaryStorageSmss(storageId, storageName, storageClass, storageDetails);
 
-			// store in DIHelper so that when we move temp smss to smss it doesn't try to reload again
+			// store in DIHelper so that when we move temp smss to smss it doesn't try to
+			// reload again
 			DIHelper.getInstance().setEngineProperty(storageId + "_" + Constants.STORE, tempSmss.getAbsolutePath());
-			storage.open(tempSmss.getAbsolutePath());			
-			
+			storage.open(tempSmss.getAbsolutePath());
+
 			smssFile = new File(tempSmss.getAbsolutePath().replace(".temp", ".smss"));
 			FileUtils.copyFile(tempSmss, smssFile);
 			tempSmss.delete();
 			storage.setSmssFilePath(smssFile.getAbsolutePath());
 			UploadUtilities.updateDIHelper(storageId, storageName, storage, smssFile);
 			SecurityEngineUtils.addEngine(storageId, global, user);
-			
-			// even if no security, just add user as database owner
-			if (user != null) {
-				List<AuthProvider> logins = user.getLogins();
-				for (AuthProvider ap : logins) {
-					SecurityEngineUtils.addEngineOwner(storageId, user.getAccessToken(ap).getId());
-				}
+
+//			EngineUtility.createPipelineJsonInSpecificEngineFolder(IEngine.CATALOG_TYPE.STORAGE, storageId, storageName);
+
+			List<AuthProvider> logins = user.getLogins();
+			for (AuthProvider ap : logins) {
+				SecurityEngineUtils.addEngineOwner(storageId, user.getAccessToken(ap).getId());
 			}
-			
+
 			ClusterUtil.pushEngine(storageId);
-		} catch(Exception e) {
+		} catch (Exception e) {
 			classLogger.error(Constants.STACKTRACE, e);
-			cleanUpCreateNewError(storage, storageId, tempSmss, smssFile, specificEngineFolder);
+			UploadUtilities.cleanUpCreateNewError(storage, storageId, tempSmss, smssFile, specificEngineFolder);
 			throw new IllegalArgumentException("Failed to create storage engine. Error: " + e.getMessage());
 		}
-		
+
 		Map<String, Object> retMap = UploadUtilities.getEngineReturnData(this.insight.getUser(), storageId);
 		return new NounMetadata(retMap, PixelDataType.UPLOAD_RETURN_MAP, PixelOperationType.MARKET_PLACE_ADDITION);
 	}
-	
-	/**
-	 * Delete all the corresponding files that are generated from the upload the failed
-	 */
-	private void cleanUpCreateNewError(IStorageEngine storage, String storageId, File tempSmss, File smssFile, File specificEngineFolder) {
-		try {
-			// close the storage so we can delete it
-			if (storage != null) {
-				storage.close();
-			}
 
-			// delete the .temp file
-			if (tempSmss != null && tempSmss.exists()) {
-				FileUtils.forceDelete(tempSmss);
-			}
-			// delete the .smss file
-			if (smssFile != null && smssFile.exists()) {
-				FileUtils.forceDelete(smssFile);
-			}
-			if (specificEngineFolder != null && specificEngineFolder.exists()) {
-				FileUtils.forceDelete(specificEngineFolder);
-			}
-			
-			UploadUtilities.removeEngineFromDIHelper(storageId);
-		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
-		}
-	}
-	
 	/**
 	 * 
 	 * @return
 	 */
 	private String getStorageName() {
 		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.STORAGE.getKey());
-		if(grs != null && !grs.isEmpty()) {
+		if (grs != null && !grs.isEmpty()) {
 			List<String> strValues = grs.getAllStrValues();
-			if(strValues != null && !strValues.isEmpty()) {
+			if (strValues != null && !strValues.isEmpty()) {
 				return strValues.get(0).trim();
 			}
 		}
-		
+
 		List<String> strValues = this.curRow.getAllStrValues();
-		if(strValues != null && !strValues.isEmpty()) {
+		if (strValues != null && !strValues.isEmpty()) {
 			return strValues.get(0).trim();
 		}
-		
+
 		throw new NullPointerException("Must define the name of the new storage engine");
 	}
-	
+
 	/**
 	 * 
 	 * @return
 	 */
 	private Map<String, Object> getStorageDetails() {
 		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.STORAGE_DETAILS.getKey());
-		if(grs != null && !grs.isEmpty()) {
+		if (grs != null && !grs.isEmpty()) {
 			List<NounMetadata> mapNouns = grs.getNounsOfType(PixelDataType.MAP);
-			if(mapNouns != null && !mapNouns.isEmpty()) {
+			if (mapNouns != null && !mapNouns.isEmpty()) {
 				return (Map<String, Object>) mapNouns.get(0).getValue();
 			}
 		}
-		
+
 		List<NounMetadata> mapNouns = this.curRow.getNounsOfType(PixelDataType.MAP);
-		if(mapNouns != null && !mapNouns.isEmpty()) {
+		if (mapNouns != null && !mapNouns.isEmpty()) {
 			return (Map<String, Object>) mapNouns.get(0).getValue();
 		}
-		
+
 		throw new NullPointerException("Must define the properties for the new storage engine");
 	}
 
